--- a/src/pages/ProductPage.css
+++ b/src/pages/ProductPage.css
@@ -1,9 +1,9 @@
-.sliding-background {
+.sliding-backgrounde {
     position: relative;
     overflow: hidden;
 }
 
-.sliding-background::before {
+.sliding-backgrounde::before {
     content: "";
     position: absolute;
     top: 0;
@@ -14,6 +14,6 @@
     transition: width 0.3s ease-in-out;
 }
 
-.sliding-background:hover::before {
+.sliding-backgrounde:hover::before {
     width: 100%;
 }
